# cursor-test

./: README.md  cursor_pro_max.py  main.py  pyproject.toml
.cursor/rules/: img-to-page.mdc
src/: __init__.py  log_widget.py  logger.py  main_app.py  main_frame.py  theme_manager.py
src/content/: __init__.py  content_pages.py
src/navigation/: __init__.py  navigation.py
