[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyside-basic-app"
version = "0.1.0"
description = "基础PySide6应用程序"
requires-python = ">=3.8"
dependencies = [
    "PySide6>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
